[project]
name = "prt-sim"
version = "0.1.0"
description = "Python Research Toolkit - Simulation"
readme = "README.md"
authors = [
    { name = "Gavin Strunk", email = "gavin.strunk@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "prt-datasets",
    "prt-nn",
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
gymnasium = [
    "datasets>=4.1.1",
    "gymnasium>=1.2.0",
    "pycocotools>=2.0.10",
    "scikit-image>=0.25.2",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.201",
]

[tool.uv.sources]
prt-nn = { path = "../prt-nn", editable = true }
prt-datasets = { path = "../prt-datasets", editable = true }


# --- Gymnasium plugin entry points ---
[project.entry-points."gymnasium.envs"]
"PRT-SIM/ImagePipeline-v0" = "prt_sim.gymnasium.image_pipeline:ImagePipeline"
